fixed pressing enter sometimes generating two new lines, added padding to chatgpt response border so cursor is no longer invisible if on first line, fixed cursor changing color depending on the color of surrounding text, fixed base hint generation for fill_in_vars problem type, fixed base generation explanation behavior for fill_in_vars problem type, added user-facing instructions to user for new fill_in_vars (write doctstrings) type, changed user-facing name from 'rename variables' to 'write doctsrings'

--- a/edtech_project/static/edtech_project/style.css
+++ b/edtech_project/static/edtech_project/style.css
@@ -1,3 +1,16 @@
+
+#chatgpt-response {
+    padding-left: 1px;
+    border-width: thin;
+    border-color: #a7a7a7;
+    caret-color: white;
+}
+
+.links {
+  color: #e6fffb; /* or whatever color matches your site */
+  text-decoration: underline; /* optional */
+}
+
 #explanation {
     color: #e6fffb;
     font-size: 17px;
